<resources>
    <string name="app_name">AstralApp</string>
    <string name="app_logo_content_description">App logo</string>
    <string name="app_version">Versión 1.0</string>
    <string name="app_developer">Elaborado por Andrea García</string>
    <!--Gradient-->
    <string name="gradient_end"> #FF695fee </string>
    <string name="gradient_mid"> #FF8c40f9 </string>
    <string name="gradient_start">#FF148CDC</string>
    <!-- Form fragment -->
    <string name="full_name_hint">Nombre completo</string>
    <string name="date_of_brith_hint">Fecha de nacimiento</string>
    <string name="postal_code_hint">Código postal</string>
    <string name="favorite_hobby_hint">Pasatiempo</string>
    <string name="button_label_continue">Continuar</string>
    <string name="postal_code_error">La longitud debe ser 5 caracteres</string>
    <string name="empty_field_error">Este campo es obligatorio</string>

    <string name="movies_hobby">Cine</string>
    <string name="cooking_hobby">Cocinar</string>
    <string name="sports_hobby">Deporte</string>
    <string name="photo_hobby">Fotografía</string>
    <string name="board_games_hobby">Juegos de mesa</string>
    <string name="modeling_hobby">Modelismo</string>
    <string name="music_hobby">Música</string>
    <string name="theater_hobby">Teatro</string>
    <string name="videogames_hobby">Videojuegos</string>
    <string name="yoga_hobby">Yoga</string>

    <string name="utc_timezone">UTC</string>
    <string name="calendar_entry_message">Selecciona una fecha</string>
    <string name="calendar_fragment_tag">DATE_PICKER_FRAGMENT</string>
    <string name="calendar_date_format">dd/MM/yyyy</string>

    <string name="card_view_content_description">Imagen descriptiva</string>
    <string name="new_search">Nueva consulta</string>
    <string name="horoscope_label">Horóscopo</string>
    <string name="date_of_birth_pattern">Fecha de nacimiento: %s</string>
    <string name="postal_code_pattern">Código postal: %s</string>
    <string name="postal_code_referendum">Referencia al código postal</string>
    <string name="user_retrieve_identifier">usuario</string>
    
    <string name="zodiac_sign_capricorn">Capricornio</string>
    <string name="zodiac_sign_gemini">Geminis</string>
    <string name="zodiac_sign_virgo">Virgo</string>
    <string name="zodiac_sign_leo">Leo</string>
    <string name="zodiac_sign_aquarius">Acuario</string>
    <string name="zodiac_sign_aries">Aries</string>
    <string name="zodiac_sign_cancer">Cáncer</string>
    <string name="zodiac_sign_libra">Libra</string>
    <string name="zodiac_sign_scorpio">Escorpio</string>
    <string name="zodiac_sign_taurus">Tauro</string>
    <string name="zodiac_sign_pisces">Piscis</string>
    <string name="zodiac_sign_sagittarius">Sagitario</string>

    <string name="chinese_sign_ox">Buey</string>
    <string name="chinese_sign_tiger">Tigre</string>
    <string name="chinese_sign_rabbit">Conejo</string>
    <string name="chinese_sign_dragon">Dragon</string>
    <string name="chinese_sign_snake">Serpiente</string>
    <string name="chinese_sign_horse">Caballo</string>
    <string name="chinese_sign_goat">Cabra</string>
    <string name="chinese_sign_monkey">Mono</string>
    <string name="chinese_sign_rooster">Gallo</string>
    <string name="chinese_sign_dog">Perro</string>
    <string name="chinese_sign_pig">Cerdo</string>
    <string name="chinese_sign_rat">Rata</string>
</resources>